# llm-101

./: .env.example  .gitignore  README.md  pyproject.toml  resources.md
.devcontainer/: devcontainer.json
llm_101/automation/n8n_hello_world/: README.md  docker_start_n8n.sh
llm_101/automation/n8n_hello_world/outputs/: fable2_strategy_guide_characters_2pg_parsed_llm10cred.md
llm_101/rag/light-rag-agent/LightRAG/: hello.py  pyproject.toml  rag_agent.py
llm_101/rag/light-rag-agent/LightRAG/pydantic-docs/: graph_chunk_entity_relation.graphml  kv_store_doc_status.json  kv_store_full_docs.json  kv_store_text_chunks.json  vdb_chunks.json
llm_101/workflow_and_agents/: rag-evaluator-pattern.ipynb  workflow_v_agents.ipynb
llm_101/workflow_and_agents/crew_ai/: crew_ai_preview.py
llm_101/workflow_and_agents/crew_ai/crew_preview/: README.md  pyproject.toml
llm_101/workflow_and_agents/crew_ai/crew_preview/src/crew_preview/: crew.py  main.py
llm_101/workflow_and_agents/google/council-of-elders/council_of_elders/: __init__.py  agent.py  prompts.py  tools.py
llm_101/workflow_and_agents/google/council-of-elders/council_of_elders/sub_agents/: __init__.py
llm_101/workflow_and_agents/google/council-of-elders/council_of_elders/utils/: create_bq_table.py  reference_guide_RAG.py  utils.py
llm_101/workflow_and_agents/google/mcp_agent/: __init__.py  agent.py
llm_101/workflow_and_agents/google/mcp_agent_web/: agent.py
llm_101/workflow_and_agents/google/weather_agent/: agent.py
(+23 files in other folders)
