[project]
name = "crew_preview"
version = "0.1.0"
description = "crew-preview using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0",
    "pysqlite3>=0.5.4",
]

[project.scripts]
crew_preview = "crew_preview.main:run"
run_crew = "crew_preview.main:run"
train = "crew_preview.main:train"
replay = "crew_preview.main:replay"
test = "crew_preview.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
